Gemaakt met Colaboratory

--- a/GAN_custom_subjects.ipynb
+++ b/GAN_custom_subjects.ipynb
@@ -160,9 +160,9 @@
       "source": [
         "g_cuda = torch.Generator(device='cuda')\n",
         "\n",
-        "prompt = \"high definition image of T*\" #@param {type:\"string\"}\n",
+        "prompt = \"high definition picture of T*\" #@param {type:\"string\"}\n",
         "negative_prompt = \"\" #@param {type:\"string\"}\n",
-        "num_samples = 10 #@param {type:\"number\"}\n",
+        "num_samples = 5 #@param {type:\"number\"}\n",
         "guidance_scale = 7.5 #@param {type:\"number\"}\n",
         "num_inference_steps = 50 #@param {type:\"number\"}\n",
         "seed = 0 #@param {type:\"number\"}\n",
